# Eda_Level5

./: .gitignore  CMakeLists.txt  Mystery1.txt  Mystery2.txt  Mystery3.txt  README.md  RESPUESTAS.txt  Resultados.txt  Text.cpp  logic.cpp  logic.h  main.cpp  main_test.cpp  settings.json  text.h  textoPrueba.txt  txtP.txt
